# Homing-Pigeon

./: .gitignore  .gitmodules  AddExample.cmake  AddUnitTests.cmake  BUILD.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
cmake/: AddExample.cmake  AddExperiment.cmake  CreateLibWithTests.cmake  LinkPyTorchToTarget.cmake
docs/html/: API_8h_source.html  ActionSelectionType_8h_source.html  ActiveTransitionNode_8h_source.html  ActiveTransition_8h_source.html  AdjacentFactorsIter_8h_source.html  AlgoTreeConfig_8h_source.html  AlgoTree_8h_source.html  AlgoVMP_8h_source.html  Aliases_8h_source.html  BTAI_8h_source.html  BackPropagationType_8h_source.html  CategoricalNode_8h_source.html  Categorical_8h_source.html  DirichletNode_8h_source.html  Dirichlet_8h_source.html  DisentangleSpritesEnv_8h_source.html  DistributionType_8h_source.html  Distribution_8h_source.html  EnvType_8h_source.html  Environment_8h_source.html  EvaluationType_8h_source.html  FactorGraph_8h_source.html  FactorNode_8h_source.html  FrozenLakeEnv_8h_source.html  GraphEnv_8h_source.html  GraphViz_8h_source.html  HiddenVarIter_8h_source.html  Human_8h_source.html  MCTSConfig_8h_source.html  MCTSNodeData_8h_source.html  MCTS_8h_source.html  MazeEnv_8h_source.html  NodeSelectionType_8h_source.html  ObservedVarIter_8h_source.html  Ops_8h_source.html  PropagationType_8h_source.html  TransitionNode_8h_source.html  Transition_8h_source.html  VMP_8h_source.html  VarNodeAttr_8h_source.html  (+249 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  enums_0.js  enums_1.js  functions_0.js  functions_1.js  (+26 more)
examples/: deep_learning_mnist.cpp  factor_graph_visualisation.cpp  graph_environment.cpp  learning_maze_navigation.cpp  maze_environment.cpp  maze_navigation.cpp  tensorflow_main.cpp  torch_tensors.cpp
examples/d_sprites/: d_sprites_from_npz_to_pickle.py
examples/evidences/: 0.evi  1.evi  12.evi  14.evi  5.evi  evidence_format.md  graph_env.evi
examples/graphs/: graph_format.md
examples/lakes/: 1.lake  2.lake  3.lake  4.lake  5.lake
examples/mazes/: 0.maze  1.maze  10.maze  11.maze  12.maze  13.maze  14.maze  15.maze  2.maze  3.maze  4.maze  5.maze  6.maze  7.maze  8.maze  9.maze  maze_format.md
libs/catch/: catch.hpp
libs/eigen/Eigen/src/Cholesky/: LDLT.h
libs/eigen/Eigen/src/Core/: CoreIterators.h  Diagonal.h  IO.h  Matrix.h  StableNorm.h
libs/eigen/Eigen/src/Eigenvalues/: GeneralizedEigenSolver.h  HessenbergDecomposition.h
libs/eigen/Eigen/src/Geometry/: AlignedBox.h
libs/eigen/Eigen/src/Householder/: HouseholderSequence.h
libs/eigen/Eigen/src/LU/: FullPivLU.h
libs/eigen/Eigen/src/SVD/: BDCSVD.h
libs/hopi/: CMakeLists.txt
libs/hopi/srcs/algorithms/: AlgoTree.cpp  AlgoTree.h  AlgoTreeConfig.cpp  AlgoTreeConfig.h  AlgoVMP.cpp  AlgoVMP.h  BackPropagationType.h  EvaluationType.h  NodeSelectionType.h
libs/hopi/srcs/algorithms/inference/: VMP.cpp  VMP.h
libs/hopi/srcs/algorithms/planning/: ActionSelectionType.h  EvaluationType.h  MCTS.cpp  MCTS.h  MCTSConfig.cpp  MCTSConfig.h  MCTSNodeData.cpp  MCTSNodeData.h  NodeSelectionType.h  PropagationType.h
libs/hopi/srcs/api/: API.cpp  API.h  Aliases.h
libs/hopi/srcs/distributions/: ActiveTransition.cpp  ActiveTransition.h  Categorical.cpp  Categorical.h  Dirichlet.cpp  Dirichlet.h  Distribution.h  DistributionType.h  Transition.cpp  Transition.h
libs/hopi/srcs/dnn/: LayersStackBuilder.cpp  LayersStackBuilder.h
libs/hopi/srcs/environments/: DisentangleSpritesEnv.cpp  DisentangleSpritesEnv.h  EnvType.h  Environment.h  FrozenLakeEnv.cpp  FrozenLakeEnv.h  GraphEnv.cpp  GraphEnv.h  MazeEnv.cpp  MazeEnv.h
libs/hopi/srcs/graphs/: FactorGraph.cpp  FactorGraph.h  GraphViz.cpp  GraphViz.h
libs/hopi/srcs/iterators/: AdjacentFactorsIter.cpp  AdjacentFactorsIter.h  HiddenVarIter.cpp  HiddenVarIter.h  ObservedVarIter.cpp  ObservedVarIter.h
libs/hopi/srcs/math/: Functions.cpp  Functions.h  Ops.cpp  Ops.h
libs/hopi/srcs/nodes/: ActiveTransitionNode.cpp  ActiveTransitionNode.h  CategoricalNode.cpp  CategoricalNode.h  DirichletNode.cpp  DirichletNode.h  FactorNode.cpp  FactorNode.h  TransitionNode.cpp  TransitionNode.h  VarNode.cpp  VarNode.h  VarNodeAttr.h  VarNodeType.h
libs/hopi/srcs/zoo/: BTAI.cpp  BTAI.h  Human.cpp  Human.h
libs/hopi/tests/algorithms/: TestAlgoTree.cpp  TestAlgoVMP.cpp  TestMCTS.cpp  TestVMP.cpp
libs/hopi/tests/contexts/: FactorGraphContexts.cpp  FactorGraphContexts.h
libs/hopi/tests/distributions/: TestActiveTransition.cpp  TestCategorical.cpp  TestDirichlet.cpp  TestTransition.cpp
libs/hopi/tests/environments/: TestMazeEnv.cpp
libs/hopi/tests/graphs/: TestFactorGraph.cpp
libs/hopi/tests/helpers/: Files.cpp  Files.h  UnitTests.cpp  UnitTests.h
libs/hopi/tests/iterators/: TestAdjacentFactorsIter.cpp  TestHiddenVarIter.cpp  TestObservedVarIter.cpp
libs/hopi/tests/math/: FunctionsTest.cpp  OpsTest.cpp
libs/hopi/tests/nodes/: TestActiveTransitionNode.cpp  TestCategoricalNode.cpp  TestDirichletNode.cpp  TestTransitionNode.cpp  TestVarNode.cpp
libs/libtensorflow.so/: libtensorflow_framework.so.2.4.1-2.params
libs/tensorflow/: libtensorflow.so.2.4.1-2.params  libtensorflow_cc.so.2  libtensorflow_cc.so.2.4.1-2.params  libtensorflow_framework.so.2.4.1-2.params
libs/tensorflow/mlir/_virtual_includes/MLIRShapeCanonicalizationIncGen/: ShapeCanonicalization.inc
libs/tensorflow/mlir/_virtual_includes/SPIRVCanonicalizationIncGen/: SPIRVCanonicalization.inc
libs/tensorflow/tensorflow/cc/client/: client_session.h
libs/tensorflow/tensorflow/cc/framework/: ops.h  scope.h
libs/tensorflow/tensorflow/cc/ops/: array_ops.h  array_ops_internal.h  audio_ops.h  const_op.h  (+24 more)
libs/torch/: build-hash  build-version
libs/torch/include/ATen/: Config.h
(+38 files in other folders)
